Refactor GuessingGame tests and classes
Reworked test cases and classes in GuessingGame without altering the fundamental functionalities. Replaced records with classes, updated instance check syntax for clearer understanding, and added copyright notice to acknowledge the inspiration source for the test cases. This refactoring aims to make the code easier to read and maintain.